archive/network/cloudflare/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
