archive/network/cloudflare/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare
  namespace: cloudflare
spec:
  endpointSelector:
    matchLabels:
      app: cloudflare-tunnel
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8000"
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
    - toFQDNs:
        - matchPattern: "*.argotunnel.com"
      toPorts:
        - ports:
            - port: "7844"
    - toFQDNs:
        - matchPattern: "*.cftunnel.com"
      toPorts:
        - ports:
            - port: "7844"
    - toFQDNs:
        - matchPattern: "*.laskonet.com"
      toPorts:
        - ports:
            - port: "443"
    - toCIDRSet:
        - cidr: 192.168.1.0/24
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: cftunnel.com
      toPorts:
        - ports:
            - port: "7844"
    - toFQDNs:
        - matchName: kenlasko.cloudflareaccess.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: pqtunnels.cloudflareresearch.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: update.argotunnel.com
      toPorts:
        - ports:
            - port: "443"
